[gd_scene load_steps=19 format=3 uid="uid://7j7no5evfsjn"]

[ext_resource type="Script" path="res://Scenes/Game/MapScene.gd" id="1_jltnr"]
[ext_resource type="TileSet" uid="uid://cbyt82wxj56is" path="res://Graphics/map_mini.tres" id="2_qsvb2"]
[ext_resource type="Script" path="res://Scenes/Game/Camera2D.gd" id="3_nnm0c"]
[ext_resource type="TileSet" uid="uid://bly1nmde8eksv" path="res://Graphics/map.tres" id="3_tbyt8"]
[ext_resource type="Texture2D" uid="uid://f2ambigpxlwv" path="res://Graphics/Overlays/corner.png" id="4_0ip84"]
[ext_resource type="PackedScene" uid="uid://c5mos0a234w8p" path="res://Scenes/Overlays/GMOptions/EventOptions.tscn" id="4_6jsjd"]
[ext_resource type="PackedScene" uid="uid://md3mc5jmctsj" path="res://Scenes/Overlays/GamePhasesScene.tscn" id="4_v3vhx"]
[ext_resource type="PackedScene" uid="uid://d0rmtj5tqyayu" path="res://Scenes/Overlays/PlayerOverlays/EventDialogueScene.tscn" id="5_ab5be"]
[ext_resource type="PackedScene" uid="uid://cqu4dqw8hmixw" path="res://Scenes/Overlays/PlayerList/PlayerListScene.tscn" id="5_u20ln"]
[ext_resource type="Texture2D" uid="uid://csht2jkgxicn" path="res://Graphics/Overlays/wood.png" id="6_bkvd1"]
[ext_resource type="PackedScene" uid="uid://jc0rwis1gjgx" path="res://Scenes/Overlays/TurnView/TurnView.tscn" id="6_nh4wk"]
[ext_resource type="Texture2D" uid="uid://dgtgp651xlux" path="res://Graphics/Overlays/title.png" id="8_lbnwj"]
[ext_resource type="Script" path="res://Scenes/Game/Minimap.gd" id="11_u4x2y"]

[sub_resource type="Gradient" id="Gradient_6mp1p"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.342508, 0.899083)
colors = PackedColorArray(0.418238, 0.601976, 1, 1, 0.614666, 0.848716, 0.417582, 1, 0.79855, 0.588704, 0.317982, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_41tvk"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_g14po"]
width = 200
height = 200
color_ramp = SubResource("Gradient_6mp1p")
noise = SubResource("FastNoiseLite_41tvk")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pf4g"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tusgc"]
bg_color = Color(0.6, 0.6, 0.6, 0.0392157)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.281874, 0.147868, 0.988281, 1)

[node name="MapNode" type="Node2D"]
position = Vector2(574, 324)
script = ExtResource("1_jltnr")
noise_height_texture = SubResource("NoiseTexture2D_g14po")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_tbyt8")
format = 2
layer_0/name = "selection"
layer_1/name = "icons"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "level"
layer_2/tile_data = PackedInt32Array()
layer_3/name = "terrain"
layer_3/tile_data = PackedInt32Array()

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_nnm0c")

[node name="Control" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -575.0
offset_top = -325.0
offset_right = 578.0
offset_bottom = 324.0

[node name="EventOptions" parent="Camera2D/Control" instance=ExtResource("4_6jsjd")]
visible = false
layout_mode = 0

[node name="EventDialogueScene" parent="Camera2D/Control" instance=ExtResource("5_ab5be")]
visible = false
layout_mode = 1

[node name="TileInfoPanel" type="Panel" parent="Camera2D/Control"]
layout_mode = 0
offset_left = -2.0
offset_top = 442.0
offset_right = 277.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2pf4g")

[node name="WoodTexture" type="TextureRect" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = -1.0
offset_top = -16.0
offset_right = 597.0
offset_bottom = 322.0
texture = ExtResource("6_bkvd1")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 22.0
offset_top = -1.0
offset_right = 167.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.64574, 0.66951, 1, 1)
text = "Tile Info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="_TileOwner" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 39.0
offset_top = 49.0
offset_right = 96.0
offset_bottom = 72.0
text = "Owner:"

[node name="TileOwner" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 114.0
offset_top = 49.0
offset_right = 246.0
offset_bottom = 72.0
text = "-"
horizontal_alignment = 1
clip_text = true

[node name="_TileLevel" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 38.0
offset_top = 159.0
offset_right = 95.0
offset_bottom = 182.0
text = "Level:"

[node name="TileLevel" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 115.0
offset_top = 160.0
offset_right = 172.0
offset_bottom = 183.0
text = "-"

[node name="_TileStat" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 77.0
offset_right = 97.0
offset_bottom = 100.0
text = "Stat:"

[node name="TileStat" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 114.0
offset_top = 77.0
offset_right = 171.0
offset_bottom = 100.0
text = "-"

[node name="TileStatModifier" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 114.0
offset_top = 102.0
offset_right = 171.0
offset_bottom = 125.0
text = "-"

[node name="_Coordinates" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 39.0
offset_top = 122.0
offset_right = 106.0
offset_bottom = 145.0
text = "Position:"

[node name="CoordinateTracker" type="Label" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 125.0
offset_right = 179.0
offset_bottom = 148.0
text = "(-,-)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Camera2D/Control/TileInfoPanel"]
layout_mode = 0
offset_left = 161.0
offset_top = 1.0
offset_right = 283.0
offset_bottom = 122.0
texture = ExtResource("4_0ip84")
expand_mode = 1
flip_h = true

[node name="GamePhasesScene" parent="Camera2D/Control" instance=ExtResource("4_v3vhx")]
position = Vector2(860, 494)
scale = Vector2(1.13118, 1.13118)

[node name="NameBox" type="Control" parent="Camera2D/Control"]
anchors_preset = 0
offset_left = 771.0
offset_top = 600.0
offset_right = 1030.0
offset_bottom = 642.0

[node name="TextureRect" type="TextureRect" parent="Camera2D/Control/NameBox"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_lbnwj")
expand_mode = 1

[node name="PeerID" type="Label" parent="Camera2D/Control/NameBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 112.0
offset_top = -18.0
offset_right = -32.0
offset_bottom = 5.0
grow_horizontal = 2
text = "-1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PlayerListScene" parent="Camera2D/Control" instance=ExtResource("5_u20ln")]
layout_mode = 0
offset_left = 946.0
offset_right = 1151.0

[node name="PlayerListButton" type="Button" parent="Camera2D/Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 141.0
offset_right = 40.0
offset_bottom = 172.0
text = "i"

[node name="TurnView" parent="Camera2D/Control" instance=ExtResource("6_nh4wk")]
offset_left = 210.0
offset_top = 12.0
offset_right = 210.0
offset_bottom = 12.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Camera2D/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 194.0
offset_bottom = 134.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="Camera2D/Control/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(186, 125)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Minimap" type="TileMap" parent="Camera2D/Control/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(574, 324)
scale = Vector2(0.04, 0.04)
tile_set = ExtResource("2_qsvb2")
format = 2
script = ExtResource("11_u4x2y")

[node name="Focus" type="Panel" parent="Camera2D/Control/SubViewportContainer/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tusgc")

[connection signal="gui_input" from="Camera2D/Control" to="." method="_on_control_gui_input"]
[connection signal="pressed" from="Camera2D/Control/PlayerListButton" to="." method="_on_player_list_button_pressed"]
